--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,16 @@
 ---
 import Root from "@/layouts/Root.astro"
+import Mesh from "@/svgs/Mesh.svg.astro"
 ---
 
 <Root>
-  <h1>Hi</h1>
+  <article class="mt-20 mb-8 flex-1 flex flex-col justify-end items-center gap-y-12">
+    <div class="">
+      <Mesh />
+    </div>
+    <section class="text-center">
+      <h1 class="text-8xl font-bold font-serif">MICHELANGELO</h1>
+      <p class="">FULL STACK DEVELOPER AND PASSIONATE ABOUT ART AND SCIENCE</p>
+    </section>
+  </article>
 </Root>
