--- a/src/components/PageFrame.astro
+++ b/src/components/PageFrame.astro
@@ -1,5 +1,5 @@
 <div class="p-4 fixed size-full bg-border">
-  <main class="rounded-2xl size-full bg-background p-4 flex flex-col">
+  <main class="rounded-2xl size-full bg-background flex flex-col">
     <slot />
   </main>
 </div>
