--- a/src/layouts/Root.astro
+++ b/src/layouts/Root.astro
@@ -13,10 +13,10 @@ import "@/styles/global.css"
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body class="text-foreground bg-black">
+  <body class="text-foreground bg-black font-mono">
     <PageFrame>
       <Header />
-      <div class="size-full flex flex-col">
+      <div class="size-full overflow-x-clip overflow-y-scroll">
         <slot />
       </div>
       <Footer />
