--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,13 +4,22 @@ import Mesh from "@/svgs/Mesh.svg.astro"
 ---
 
 <Root>
-  <article class="mt-20 mb-8 flex-1 flex flex-col justify-end items-center gap-y-12">
-    <div class="">
-      <Mesh />
+  <!--Home-->
+  <article class="flex flex-col justify-end items-center size-full">
+    <div class="mb-8 flex items-center justify-center flex-1 mt-20">
+      <Mesh class="min-h-[300px] max-h-[400px] md:h-auto" />
     </div>
-    <section class="text-center">
-      <h1 class="text-8xl font-bold font-serif">MICHELANGELO</h1>
-      <p class="">FULL STACK DEVELOPER AND PASSIONATE ABOUT ART AND SCIENCE</p>
+    <section class="text-center mb-12 px-2">
+      <h1
+        class="text-4xl xs:text-5xl sm:text-6xl md:text-7xl font-bold font-serif"
+      >
+        MICHELANGELO
+      </h1>
+      <p class="text-sm sm:text-base">
+        FULL STACK DEVELOPER AND PASSIONATE ABOUT ART AND SCIENCE
+      </p>
     </section>
   </article>
+  <!--Projects-->
+  <article class="size-full"></article>
 </Root>
