--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,9 +18,51 @@
 }
 
 * {
-  @apply box-border border-border;
+  @apply box-border border-border text-wrap;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  @apply text-balance;
+}
+p {
+  @apply text-pretty;
 }
 
-a {
-  @apply underline underline-offset-2 hover:text-accent-foreground transition;
+@font-face {
+  font-family: "Eudoxus Sans";
+  src: url("/public/fonts/EudoxusSans-Regular.woff2") format("woff2");
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Eudoxus Sans";
+  src: url("/public/fonts/EudoxusSans-Bold.woff2") format("woff2");
+  font-weight: bold;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Eudoxus Sans";
+  src: url("/public/fonts/EudoxusSans-ExtraBold.woff2") format("woff2");
+  font-weight: 800;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Modern Era Mono";
+  src: url("/public/fonts/ModernEraMono-Medium.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Modern Era Mono";
+  src: url("/public/fonts/ModernEraMono-ExtraBold.woff2") format("woff2");
+  font-weight: 800;
+  font-style: normal;
 }
