menu & responsive frame

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import Link from "./Link.astro"
 ---
 
 <footer
-  class="hidden fixed bottom-4 left-4 right-4 lg:flex justify-between text-xs pb-12 px-4 lg:px-16 mx-auto"
+  class="hidden fixed bottom-4 left-4 right-4 lg:flex justify-between text-xs pb-12 px-4 lg:px-16 mx-auto font-mono"
 >
   <p>
     CREATED WITH<br /><Link href="https://astro.build/" target="_blank"
