--- a/src/components/PageFrame.astro
+++ b/src/components/PageFrame.astro
@@ -1,4 +1,4 @@
-<div class="p-4 fixed size-full bg-border">
+<div class="p-[var(--fp)] fixed size-full bg-border">
   <main class="rounded-2xl size-full bg-background flex flex-col">
     <slot />
   </main>
