--- a/src/layouts/Root.astro
+++ b/src/layouts/Root.astro
@@ -13,7 +13,7 @@ import "@/styles/global.css"
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body class="text-foreground bg-black font-mono">
+  <body class="text-foreground bg-black font-sans">
     <PageFrame>
       <Header />
       <div class="size-full overflow-x-clip overflow-y-scroll">
@@ -21,6 +21,6 @@ import "@/styles/global.css"
       </div>
       <Footer />
     </PageFrame>
-    <!-- <NoiseEffect /> -->
+    <NoiseEffect />
   </body>
 </html>
