--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,9 +6,9 @@ import { ArrowRight } from "lucide"
 ---
 
 <header
-  class="fixed top-[var(--fp)] left-[var(--fp)] right-[var(--fp)] p-4 flex items-center lg:items-start justify-between text-sm font-mono"
+  class="fixed top-[var(--fp)] left-[var(--fp)] right-[var(--fp)] p-4 flex items-center lg:items-start justify-between text-xs font-mono"
 >
-  <p class="font-bold text-accent-foreground select-none">MICHELANGELO</p>
+  <p class="hidden lg:inline font-bold select-none">MICHELANGELO</p>
   <div class="hidden lg:flex text-xs gap-x-12">
     <p>
       WRITE ME AN EMAIL<br />
@@ -31,12 +31,11 @@ import { ArrowRight } from "lucide"
     </p>
   </div>
   <nav class="hidden lg:block *:flex *:items-center *:justify-end *:gap-x-2">
-    <p class="text-accent-foreground font-extrabold">
+    <p>
       <LucideIcon class="size-3.5" icon={ArrowRight} />
-      <a href="/">PRTFL</a>
+      <a href="/">HOME</a>
     </p>
-    <p><a href="/#cv">CV</a></p>
-    <p><a href="https://imangelo.dev/" target="_blank">BLG</a></p>
+    <p><a href="/#cv">RSM</a></p>
   </nav>
   <div class="lg:hidden">
     <MenuBtn />
