--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Section from "@/components/Section.astro"
 import Root from "@/layouts/Root.astro"
 import Mesh from "@/svgs/Mesh.svg.astro"
 ---
@@ -21,5 +22,63 @@ import Mesh from "@/svgs/Mesh.svg.astro"
     </section>
   </article>
   <!--Projects-->
-  <article class="size-full"></article>
+  <Section class="flex flex-col justify-start xl:justify-between gap-x-12 pb-0">
+    <h2 class="font-extrabold text-5xl xs:text-6xl md:text-7xl xl:text-8xl text-right mt-20 mb-16 xl:mb-0">PROJECTS</h2>
+    <div
+      class="hidden xl:flex items-end gap-x-4 text-xs font-mono md:px-12 flex-1 max-w-screen-2xl mx-auto"
+    >
+      <div class="mb-32 w-full max-w-36 flex flex-col gap-y-4">
+        <p class="text-base font-bold font-sans mb-16">Personal Blog</p>
+        <p>My blog about anything I want to write.</p>
+        <p>Project Type:<br />Web</p>
+      </div>
+      <div>
+        <img
+          class="rounded-t-2xl max-w-[900px] w-full mx-auto"
+          src="/img/imangelo-screenshot.png"
+          alt=""
+        />
+      </div>
+      <div class="mb-32 flex flex-col gap-y-4 w-full max-w-36">
+        <p>Date Created:<br />-2024</p>
+        <p>
+          Stack:
+          <span class="flex flex-col">
+            <span>Astro</span>
+            <span>React</span>
+            <span>Tailwind CSS</span>
+          </span>
+        </p>
+      </div>
+    </div>
+    <div class="xl:hidden max-w-screen-xl mx-auto flex flex-col gap-y-4">
+      <div>
+        <img
+          class="rounded-2xl max-w-screen-sm w-full mx-auto"
+          src="/img/imangelo-screenshot.png"
+          alt=""
+        />
+      </div>
+      <div class="grid grid-cols-2 gap-x-8 font-mono text-xs sm:px-4">
+        <div>
+          <p class="text-base font-bold font-sans mb-6">Personal Blog</p>
+          <div class="flex flex-col gap-y-4">
+            <p>My blog about anything I want to write.</p>
+            <p>Project Type:<br />Web</p>
+          </div>
+        </div>
+        <div class="flex flex-col gap-y-4">
+          <p>Date Created:<br />-2024</p>
+          <p>
+            Stack:
+            <span class="flex flex-col">
+              <span>Astro</span>
+              <span>React</span>
+              <span>Tailwind CSS</span>
+            </span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </Section>
 </Root>
