--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import { ArrowRight } from "lucide"
 ---
 
 <header
-  class="fixed top-[var(--fp)] left-[var(--fp)] right-[var(--fp)] p-4 flex items-center lg:items-start justify-between text-xs font-mono"
+  class="fixed top-[var(--fp)] left-[var(--fp)] right-[var(--fp)] p-4 flex items-center lg:items-start justify-between text-xs font-mono z-40"
 >
   <p class="hidden lg:inline font-bold select-none">MICHELANGELO</p>
   <div class="hidden lg:flex text-xs gap-x-12">
