--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,15 +3,22 @@ import Link from "./Link.astro"
 ---
 
 <footer
-  class="hidden fixed bottom-4 left-4 right-4 lg:flex justify-between text-xs pb-12 px-4 lg:px-16 mx-auto font-mono"
+  class:list={[
+    "fixed bottom-[var(--fp)] left-[var(--fp)] right-[var(--fp)] z-40",
+    Astro.props.class,
+  ]}
 >
-  <p>
-    CREATED WITH<br /><Link href="https://astro.build/" target="_blank"
-      >ASTRO</Link
-    >
-  </p>
-  <p class="text-right">
-    POWERED BY<br />
-    <Link href="https://vercel.com/" target="_blank">VERCEL</Link>
-  </p>
+  <div
+    class="flex justify-between pb-4 px-4 lg:px-16 mx-auto font-mono text-xs"
+  >
+    <p>
+      CREATED WITH<br /><Link href="https://astro.build/" target="_blank"
+        >ASTRO</Link
+      >
+    </p>
+    <p class="text-right">
+      POWERED BY<br />
+      <Link href="https://vercel.com/" target="_blank">VERCEL</Link>
+    </p>
+  </div>
 </footer>
