--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,38 +6,44 @@ import { ArrowRight } from "lucide"
 ---
 
 <header
-  class="fixed top-[var(--fp)] left-[var(--fp)] right-[var(--fp)] p-4 flex items-center lg:items-start justify-between text-xs font-mono z-40"
+  class="fixed top-[var(--fp)] left-[var(--fp)] right-[var(--fp)] p-4 z-30"
 >
-  <p class="hidden lg:inline font-bold select-none">MICHELANGELO</p>
-  <div class="hidden lg:flex text-xs gap-x-12">
-    <p>
-      WRITE ME AN EMAIL<br />
-      <Link href="mailto:michelangelovalderrama@gmail.com"
-        >MICHELANGELOVALDERRAMA@GMAIL.COM</Link
-      >
-    </p>
-    <p>
-      SOCIAL:
-      <span class="flex gap-x-2"
-        ><Link href="https://github.com/michelangelo-valderrama" target="_blank"
-          >GTHB</Link
+  <div
+    class="flex items-center lg:items-start justify-between text-xs font-mono"
+  >
+    <p class="text-base font-bold select-none">MICHELANGELO</p>
+    <!-- Desktop -->
+    <div class="hidden lg:flex text-xs gap-x-12">
+      <p>
+        WRITE ME AN EMAIL<br />
+        <Link href="mailto:michelangelovalderrama@gmail.com"
+          >MICHELANGELOVALDERRAMA@GMAIL.COM</Link
         >
-        <Link
-          href="https://www.linkedin.com/in/michelangelo-v-2a71702b1"
-          target="_blank">LI</Link
+      </p>
+      <p>
+        SOCIAL:
+        <span class="flex gap-x-2"
+          ><Link
+            href="https://github.com/michelangelo-valderrama"
+            target="_blank">GTHB</Link
+          >
+          <Link
+            href="https://www.linkedin.com/in/michelangelo-v-2a71702b1"
+            target="_blank">LI</Link
+          >
+          <Link href="https://twitter.com/VTokyo9" target="_blank">TW</Link
+          ></span
         >
-        <Link href="https://twitter.com/VTokyo9" target="_blank">TW</Link></span
-      >
-    </p>
-  </div>
-  <nav class="hidden lg:block *:flex *:items-center *:justify-end *:gap-x-2">
-    <p>
-      <LucideIcon class="size-3.5" icon={ArrowRight} />
-      <a href="/">HOME</a>
-    </p>
-    <p><a href="/#cv">RSM</a></p>
-  </nav>
-  <div class="lg:hidden">
+      </p>
+    </div>
+    <nav class="hidden lg:block *:flex *:items-center *:justify-end *:gap-x-1.5">
+      <p>
+        <LucideIcon class="size-3.5" icon={ArrowRight} />
+        <a href="/">HOME</a>
+      </p>
+      <p><a href="/#cv">RSM</a></p>
+    </nav>
+    <!-- Mobile -->
     <MenuBtn />
   </div>
 </header>
