--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -6,6 +6,6 @@ interface Props extends HTMLAttributes<"a"> {}
 
 <a
   {...Astro.props}
-  class="underline underline-offset-2 hover:text-accent-foreground transition"
+  class="underline underline-offset-2"
   ><slot /></a
 >
