--- a/src/components/MenuBtn.astro
+++ b/src/components/MenuBtn.astro
@@ -1,27 +1,30 @@
 ---
+import Footer from "./Footer.astro"
 import Link from "./Link.astro"
 import LucideIcon from "./LucideIcon.astro"
 import { ArrowRight } from "lucide"
 ---
 
-<button
-  id="btn-menu"
-  type="button"
-  class={`
-    absolute top-3 right-4 z-50
+<div class="lg:hidden absolute top-[var(--fp)] right-[var(--fp)] z-40">
+  <button
+    id="btn-menu"
+    type="button"
+    class={`
     size-9 flex flex-col gap-y-1.5 justify-center p-1.5
     *:w-full *:h-[2px] *:rounded-lg *:bg-foreground
     *:translate-y-0 *:rotate-0 *:transition *:duration-[500ms]
   `}
->
-  <span id="menu-bar-top"></span>
-  <span id="menu-bar-bottom"></span>
-</button>
+  >
+    <span id="menu-bar-top"></span>
+    <span id="menu-bar-bottom"></span>
+  </button>
+</div>
 
 <div
   id="ctn-menu"
   class={`
-    fixed top-0 left-0 w-full h-full bg-background p-4
+    lg:hidden
+    fixed top-0 left-0 size-full bg-background p-4
     opacity-0 pointer-events-none transition duration-300
   `}
 >
@@ -35,7 +38,7 @@ import { ArrowRight } from "lucide"
       `}
     >
       <p class="text-accent-foreground">
-        <LucideIcon class="mr-6 xs:mr-10 sm:mr-14 size-14" icon={ArrowRight} />
+        <LucideIcon class="mr-4 size-14" icon={ArrowRight} />
         <span>HOME</span>
       </p>
       <p>
@@ -75,19 +78,7 @@ import { ArrowRight } from "lucide"
       </div>
     </div>
   </div>
-  <div
-    class="absolute bottom-12 left-4 md:left-8 right-4 md:right-8 flex justify-between text-xs"
-  >
-    <p>
-      CREATED WITH<br /><Link href="https://astro.build/" target="_blank"
-        >ASTRO</Link
-      >
-    </p>
-    <p class="text-right">
-      POWERED BY<br />
-      <Link href="https://vercel.com/" target="_blank">VERCEL</Link>
-    </p>
-  </div>
+  <Footer />
 </div>
 
 <style>
