--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,51 +1,10 @@
 ---
-import Project from "@/components/Project.astro"
-import Section from "@/components/Section.astro"
-import StarsEffect from "@/components/StarsEffect.astro"
-import Root from "@/layouts/Root.astro"
-import Mesh from "@/svgs/Mesh.svg.astro"
-
-const projects = [
-  {
-    title: "Personal Blog",
-    subtitle: "My blog about anything I want to write.",
-    type: "Web",
-    stack: ["Astro", "React", "Tailwind CSS"],
-    date: 2024,
-  },
-]
+import Root from "@/layouts/Root.layout.astro"
+import Hero from "@/sections/Hero.section.astro"
+import Projects from "@/sections/Projects.section.astro"
 ---
 
 <Root>
-  <!--Home-->
-  <div class="size-full relative">
-    <article class="flex flex-col justify-end items-center size-full absolute top-0 left-0 z-20">
-      <div class="mb-8 flex items-center justify-center flex-1 mt-20">
-        <Mesh class="min-h-[300px] max-h-[400px] md:h-auto" />
-      </div>
-      <section class="text-center mb-12 px-2">
-        <h1
-          class="text-4xl xs:text-5xl sm:text-6xl md:text-7xl font-bold font-serif"
-        >
-          MICHELANGELO
-        </h1>
-        <p class="text-sm sm:text-base">
-          FULL STACK DEVELOPER AND PASSIONATE ABOUT ART AND SCIENCE
-        </p>
-      </section>
-    </article>
-    <div class="absolute bottom-0 left-0 w-full bg-gradient-to-t from-background to-transparent h-24 z-10"></div>
-    <StarsEffect class="relative -top-8 -left-8 z-0" />
-  </div>
-  <!--Projects-->
-  <Section class="pb-0 flex flex-col justify-start xl:justify-between">
-    <h2
-      class="font-extrabold text-5xl xs:text-6xl md:text-7xl xl:text-8xl text-right mt-28 mb-16 xl:mb-28"
-    >
-      PROJECTS
-    </h2>
-    <div class="flex flex-col gap-y-64">
-      {projects.map((p) => <Project {...p} />)}
-    </div>
-  </Section>
+  <Hero />
+  <Projects />
 </Root>
