--- a/src/sections/Hero.section.astro
+++ b/src/sections/Hero.section.astro
@@ -1,9 +1,10 @@
 ---
 import Section from "@/components/Section.astro"
+import StarsEffect from "@/components/StarsEffect.astro"
 import Mesh from "@/svgs/Mesh.svg.astro"
 ---
 
-<Section class="flex flex-col justify-end items-center">
+<Section class="flex flex-col justify-end items-center absolute top-0 left-0">
   <div class="mb-8 flex items-center justify-center flex-1 mt-20">
     <Mesh class="min-h-[300px] max-h-[400px] md:h-auto" />
   </div>
@@ -18,3 +19,4 @@ import Mesh from "@/svgs/Mesh.svg.astro"
     </p>
   </div>
 </Section>
+<StarsEffect class="" />
