--- a/src/components/NoiseEffect.astro
+++ b/src/components/NoiseEffect.astro
@@ -3,34 +3,76 @@
   id="canvas-noise"></canvas>
 
 <script>
+  let width: number,
+    height: number,
+    noiseData: ImageData[] = [],
+    frame = 0,
+    loopTimeout: number
+
   const canvas = document.getElementById("canvas-noise") as HTMLCanvasElement
   const ctx = canvas.getContext("2d")!
 
-  resize()
-  window.onresize = resize
+  init()
 
-  function resize() {
-    canvas.width = window.innerWidth * window.devicePixelRatio
-    canvas.height = window.innerHeight * window.devicePixelRatio
-    canvas.style.width = `${window.innerWidth}px`
-    canvas.style.height = `${window.innerHeight}px`
-  }
+  function createNoise() {
+    const idata = ctx.createImageData(width, height)
+    const buffer32 = new Uint32Array(idata.data.buffer)
+    const len = buffer32.length
 
-  function noise(ctx: CanvasRenderingContext2D) {
-    const w = ctx.canvas.width,
-      h = ctx.canvas.height,
-      iData = ctx.createImageData(w, h),
-      buffer32 = new Uint32Array(iData.data.buffer)
-
-    for (let i = 0; i < buffer32.length; i++) {
-      if (Math.random() < 0.5) buffer32[i] = 0xffffffff
+    for (let i = 0; i < len; i++) {
+      if (Math.random() < 0.5) {
+        buffer32[i] = 0xffffffff
+      }
     }
 
-    ctx.putImageData(iData, 0, 0)
+    noiseData.push(idata)
   }
 
-  ;(function loop() {
-    noise(ctx)
-    requestAnimationFrame(loop)
-  })()
+  function paintNoise() {
+    if (frame === 9) {
+      frame = 0
+    } else {
+      frame++
+    }
+
+    ctx.putImageData(noiseData[frame], 0, 0)
+  }
+
+  function loop() {
+    paintNoise()
+
+    loopTimeout = window.setTimeout(() => {
+      window.requestAnimationFrame(loop)
+    }, 1000 / 25)
+  }
+
+  function init() {
+    width = window.innerWidth
+    height = window.innerHeight
+
+    canvas.width = width
+    canvas.height = height
+
+    for (let i = 0; i < 10; i++) {
+      createNoise()
+    }
+
+    loop()
+  }
+
+  let resizeThrottle: number
+  function reset() {
+    window.addEventListener(
+      "resize",
+      () => {
+        window.clearTimeout(resizeThrottle)
+
+        resizeThrottle = window.setTimeout(() => {
+          window.clearTimeout(loopTimeout)
+          init()
+        }, 200)
+      },
+      false
+    )
+  }
 </script>
