--- a/src/sections/Hero.section.astro
+++ b/src/sections/Hero.section.astro
@@ -5,18 +5,35 @@ import Mesh from "@/svgs/Mesh.svg.astro"
 ---
 
 <Section class="flex flex-col justify-end items-center absolute top-0 left-0">
-  <div class="mb-8 flex items-center justify-center flex-1 mt-20">
-    <Mesh class="min-h-[300px] max-h-[400px] md:h-auto" />
-  </div>
   <div class="text-center mb-6 lg:mb-12 px-2">
-    <h1
-      class="text-4xl xs:text-5xl sm:text-6xl md:text-7xl font-bold font-serif"
-    >
+    <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold font-serif">
       MICHELANGELO
     </h1>
     <p class="text-sm sm:text-base">
       FULL STACK DEVELOPER AND PASSIONATE ABOUT ART AND SCIENCE
     </p>
   </div>
+  <div
+    class="flex items-center justify-center absolute top-0 left-0 size-full pointer-events-none pb-20 px-8"
+  >
+    <Mesh
+      id="mesh"
+      class="h-full max-h-[500px] w-auto text-accent-foreground"
+      stroke-dasharray="1000"
+      stroke-dashoffset="1000"
+    />
+  </div>
 </Section>
-<StarsEffect class="" />
+<StarsEffect />
+
+<style>
+  #mesh {
+    animation: dash 2s forwards ease-in;
+  }
+
+  @keyframes dash {
+    to {
+      stroke-dashoffset: 0;
+    }
+  }
+</style>
