--- a/src/components/MenuBtn.astro
+++ b/src/components/MenuBtn.astro
@@ -1,8 +1,9 @@
 ---
+import { ArrowRight } from "lucide"
 import Footer from "./Footer.astro"
 import Link from "./Link.astro"
 import LucideIcon from "./LucideIcon.astro"
-import { ArrowRight } from "lucide"
+import TextAnim from "./TextAnim.astro"
 ---
 
 <div class="lg:hidden absolute top-[var(--fp)] right-[var(--fp)] z-40">
@@ -12,7 +13,7 @@ import { ArrowRight } from "lucide"
     class={`
     size-9 flex flex-col gap-y-1.5 justify-center p-1.5
     *:w-full *:h-[2px] *:rounded-lg *:bg-foreground
-    *:translate-y-0 *:rotate-0 *:transition *:duration-[500ms]
+    *:translate-y-0 *:rotate-0 *:transition *:duration-[400ms]
   `}
   >
     <span id="menu-bar-top"></span>
@@ -24,12 +25,12 @@ import { ArrowRight } from "lucide"
   id="ctn-menu"
   class={`
     lg:hidden
-    fixed top-0 left-0 size-full bg-background p-4
+    fixed top-0 left-0 size-full bg-background p-4 uppercase
     opacity-0 pointer-events-none transition duration-300
   `}
 >
   <div
-    class="flex flex-col items-end justify-center h-full gap-y-6 max-w-lg mx-auto"
+    class="flex flex-col items-center justify-center h-full gap-y-6 max-w-lg mx-auto"
   >
     <nav
       class={`
@@ -38,29 +39,32 @@ import { ArrowRight } from "lucide"
       `}
     >
       <p class="text-accent-foreground">
-        <LucideIcon class="mr-4 size-14" icon={ArrowRight} />
-        <span>HOME</span>
+        <TextAnim trigger class="flex items-center mr-4" h="5.5rem">
+          <LucideIcon class="size-14" icon={ArrowRight} />
+        </TextAnim>
+        <TextAnim trigger h="5.5rem">Home</TextAnim>
       </p>
       <p>
-        <LucideIcon
-          class="hidden mr-6 xs:mr-10 sm:mr-14 size-14"
-          icon={ArrowRight}
-        />
-        <span>RSM</span>
+        <TextAnim trigger class="mr-4">
+          <LucideIcon class="size-14 hidden" icon={ArrowRight} />
+        </TextAnim>
+        <TextAnim trigger h="5.5rem">Rsm</TextAnim>
       </p>
     </nav>
     <div class="text-xs grid grid-cols-2 gap-x-4">
       <div class="flex flex-col gap-y-8 truncate">
         <p>
-          WRITE ME AN EMAIL<br />
-          <Link href="mailto:michelangelovalderrama@gmail.com"
-            >MICHELANGELOVALDERRAMA@GMAIL.COM</Link
-          >
+          <TextAnim trigger>Write me an email</TextAnim>
+          <TextAnim trigger>
+            <Link href="mailto:michelangelovalderrama@gmail.com">
+              email@gmail.com
+            </Link>
+          </TextAnim>
         </p>
         <p>
-          SOCIAL:
-          <span class="flex gap-x-2"
-            ><Link
+          <TextAnim trigger> SOCIAL: </TextAnim>
+          <TextAnim trigger class="flex gap-x-2">
+            <Link
               href="https://github.com/michelangelo-valderrama"
               target="_blank">GTHB</Link
             >
@@ -68,13 +72,14 @@ import { ArrowRight } from "lucide"
               href="https://www.linkedin.com/in/michelangelo-v-2a71702b1"
               target="_blank">LI</Link
             >
-            <Link href="https://twitter.com/VTokyo9" target="_blank">TW</Link
-            ></span
-          >
+            <Link href="https://twitter.com/VTokyo9" target="_blank">TW</Link>
+          </TextAnim>
         </p>
       </div>
-      <div>
-        <p>FULL STACK DEVELOPER AND PASSIONATE ABOUT ART AND SCIENCE</p>
+      <div class="flex justify-end">
+        <p>
+          <TextAnim trigger>FULL STACK DEVELOPER</TextAnim>
+        </p>
       </div>
     </div>
   </div>
@@ -100,6 +105,8 @@ import { ArrowRight } from "lucide"
 
   btnMenu.addEventListener("click", () => {
     btnMenu.classList.toggle("open")
+
     ctnMenu.classList.toggle("show-menu")
+    ctnMenu.classList.toggle("up-text-anim-trigger")
   })
 </script>
