--- a/src/sections/Hero.section.astro
+++ b/src/sections/Hero.section.astro
@@ -1,16 +1,19 @@
 ---
 import Section from "@/components/Section.astro"
 import StarsEffect from "@/components/StarsEffect.astro"
+import TextAnim from "@/components/TextAnim.astro"
 import Mesh from "@/svgs/Mesh.svg.astro"
 ---
 
 <Section class="flex flex-col justify-end items-center absolute top-0 left-0">
   <div class="text-center mb-6 lg:mb-12 px-2">
     <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold font-serif">
-      MICHELANGELO
+      <TextAnim h="4.25rem">MICHELANGELO</TextAnim>
     </h1>
     <p class="text-sm sm:text-base">
-      FULL STACK DEVELOPER AND PASSIONATE ABOUT ART AND SCIENCE
+      <TextAnim d="400ms" h="2.5rem">
+        FULL STACK DEVELOPER AND PASSIONATE ABOUT ART AND SCIENCE
+      </TextAnim>
     </p>
   </div>
   <div
@@ -28,7 +31,7 @@ import Mesh from "@/svgs/Mesh.svg.astro"
 
 <style>
   #mesh {
-    animation: dash 2s forwards ease-in;
+    animation: dash 1500ms forwards ease-in;
   }
 
   @keyframes dash {
