--- a/src/sections/Hero.section.astro
+++ b/src/sections/Hero.section.astro
@@ -6,13 +6,16 @@ import Mesh from "@/svgs/Mesh.svg.astro"
 ---
 
 <Section class="flex flex-col justify-end items-center absolute top-0 left-0">
-  <div class="text-center mb-6 lg:mb-12 px-2">
-    <h1 class="text-4xl sm:text-5xl md:text-7xl font-bold font-serif">
-      <TextAnim h="4.25rem">MICHELANGELO</TextAnim>
+  <div class="text-center mb-6 lg:mb-12 px-2 uppercase">
+    <h1 class="text-5xl sm:text-6xl md:text-8xl font-serif relative select-none">
+      <TextAnim h="4.25rem">Michelangelo</TextAnim>
+      <TextAnim h="4.25rem" class="absolute top-0 left-0 blur-lg md:blur-2xl"
+        >Michelangelo</TextAnim
+      >
     </h1>
     <p class="text-sm sm:text-base">
       <TextAnim d="400ms" h="2.5rem">
-        FULL STACK DEVELOPER AND PASSIONATE ABOUT ART AND SCIENCE
+        Full stack developer & passionate about art and science
       </TextAnim>
     </p>
   </div>
@@ -35,8 +38,12 @@ import Mesh from "@/svgs/Mesh.svg.astro"
   }
 
   @keyframes dash {
+    from {
+      filter: blur(10px);
+    }
     to {
       stroke-dashoffset: 0;
+      filter: blur(0px);
     }
   }
 </style>
