--- a/src/components/Section.astro
+++ b/src/components/Section.astro
@@ -2,11 +2,17 @@
 interface Props {
   as: string
   class?: string
+  frameColor?: string
 }
 
-const { as: As = "section" } = Astro.props
+const { as: As = "section", frameColor = "#000", ...props } = Astro.props
 ---
 
-<As class:list={["size-full p-4 overflow-hidden", Astro.props.class]}>
+<As
+  {...props}
+  section
+  data-color={Astro.props.frameColor}
+  class:list={["size-full p-4 overflow-hidden", Astro.props.class]}
+>
   <slot />
 </As>
