--- a/src/layouts/Root.layout.astro
+++ b/src/layouts/Root.layout.astro
@@ -4,6 +4,7 @@ import Header from "@/components/Header.astro"
 import Footer from "@/components/Footer.astro"
 import GridOverlay from "@/components/GridOverlay.astro"
 import "@/styles/global.css"
+import PageFrame from "@/components/PageFrame.astro"
 ---
 
 <!doctype html>
@@ -11,12 +12,11 @@ import "@/styles/global.css"
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="favicon.svg" type="image/svg+xml" />
     <title>Document</title>
   </head>
   <body class="font-sans text-foreground bg-black h-dvh">
-    <div class="p-[var(--fp)] size-full fixed top-0 left-0 bg-border/70">
-      <div class="relative size-full rounded-2xl bg-background"></div>
-    </div>
+    <PageFrame />
     <Header />
     <main class="h-full p-[var(--fp)]">
       <div
@@ -26,7 +26,7 @@ import "@/styles/global.css"
       </div>
     </main>
     <Footer class="hidden lg:block" />
-    <NoiseEffect />
+    <!-- <NoiseEffect /> -->
     <!-- <GridOverlay /> -->
   </body>
 </html>
