--- a/src/sections/Projects.section.astro
+++ b/src/sections/Projects.section.astro
@@ -2,7 +2,11 @@
 import Section from "@/components/Section.astro"
 ---
 
-<Section class="pb-0 flex flex-col justify-start xl:justify-between">
+<Section
+  id="proyects-section"
+  class="pb-0 flex flex-col justify-start xl:justify-between"
+  frameColor="hsl(var(--border))"
+>
   <h2
     class="font-extrabold text-5xl xs:text-6xl md:text-7xl xl:text-8xl text-right mt-28 mb-16 xl:mb-28"
   >
