--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,4 +7,7 @@ import Projects from "@/sections/Projects.section.astro"
 <Root>
   <Hero />
   <Projects />
+  <div class="h-full"></div>
+  <div class="h-full"></div>
+  <div class="h-full"></div>
 </Root>
