--- a/src/sections/Projects.section.astro
+++ b/src/sections/Projects.section.astro
@@ -1,18 +1,52 @@
 ---
 import Section from "@/components/Section.astro"
+import Project from "@/components/Project.astro"
+import type { Project as ProyectInterface } from "@/interfaces/project.interface"
+
+const projects: ProyectInterface[] = [
+  {
+    date: "2024",
+    stack: ["React", "TypeScript", "TailwindCSS"],
+    title: "Project 1",
+    type: "web",
+    description:
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc.",
+  },
+  {
+    date: "2024",
+    stack: ["React", "TypeScript", "TailwindCSS"],
+    title: "Project 2",
+    type: "web",
+    description:
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc.",
+  },
+  {
+    date: "2024",
+    stack: ["React", "TypeScript", "TailwindCSS"],
+    title: "Project 3",
+    type: "web",
+    description:
+      "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec purus nec nunc.",
+  },
+]
 ---
 
 <Section
-  id="proyects-section"
-  class="pb-0 flex flex-col justify-start xl:justify-between"
+  id="projects-section"
+  class="sticky top-0 h-[200vh]"
   frameColor="hsl(var(--border))"
 >
   <h2
-    class="font-extrabold text-5xl xs:text-6xl md:text-7xl xl:text-8xl text-right mt-28 mb-16 xl:mb-28"
+    class="font-extrabold text-5xl xs:text-6xl md:text-7xl xl:text-8xl text-right mt-28 mb-8"
   >
     PROJECTS
   </h2>
-  <!-- <div class="flex flex-col gap-y-64">
-    {projects.map((p) => <Project {...p} />)}
-  </div> -->
+  <div id="projects-list" class="flex overflow-x-scroll">
+    {
+      projects.map((p) => (
+        <Project project-item class="flex-[0_0_auto]" {...p} />
+      ))
+    }
+  </div>
+  <div class="progress-bar fixed bottom-4 left-0 w-full bg-green-400 h-2 scale-0"></div>
 </Section>
